// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Note
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="date"
    >
      Date
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="date"
        onChange={[MockFunction]}
        type="text"
        value="23/09/2020"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="projectId"
    >
      Project
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="projectId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Project
        </option>
        <option
          value={1}
        >
          Home
        </option>
        <option
          value={2}
        >
          Work
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="content"
    >
      Content
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="content"
        onChange={[MockFunction]}
        type="text"
        value="Securing React Apps with Auth0"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Note
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="date"
    >
      Date
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="date"
        onChange={[MockFunction]}
        type="text"
        value="23/09/2020"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="projectId"
    >
      Project
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="projectId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Project
        </option>
        <option
          value={1}
        >
          Home
        </option>
        <option
          value={2}
        >
          Work
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="content"
    >
      Content
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="content"
        onChange={[MockFunction]}
        type="text"
        value="Securing React Apps with Auth0"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
